fix: allow single numbers to break in new lines

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ main {
     flex: 1;
     text-align: right;
     padding: 15px;
+    word-break: break-all;
 }
 
 button:hover {
